[gd_scene load_steps=12 format=3 uid="uid://cp8qbl24qm2n3"]

[ext_resource type="Texture2D" uid="uid://b5y4sg3y4ypd4" path="res://assets/Bg.png" id="1_agen5"]
[ext_resource type="Script" path="res://scripts/main.gd" id="2_1chi2"]
[ext_resource type="FontFile" uid="uid://1ry2mpukyukr" path="res://assets/pixel_font.ttf" id="2_pu8ha"]
[ext_resource type="Script" path="res://scripts/player.gd" id="3_pdcih"]
[ext_resource type="Script" path="res://scripts/cpu.gd" id="4_0peel"]
[ext_resource type="Script" path="res://scripts/ball.gd" id="4_g34ar"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufsw8"]
size = Vector2(20, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_854sb"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhnmp"]
size = Vector2(1152, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3r76"]
size = Vector2(1152, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spf21"]
size = Vector2(64, 648)

[node name="Main" type="Sprite2D"]
texture_filter = 1
texture = ExtResource("1_agen5")
centered = false
script = ExtResource("2_1chi2")

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(50, 324)
script = ExtResource("3_pdcih")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
color = Color(1, 0.819608, 0.862745, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_ufsw8")

[node name="Cpu" type="StaticBody2D" parent="."]
position = Vector2(1082, 324)
script = ExtResource("4_0peel")

[node name="ColorRect" type="ColorRect" parent="Cpu"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -60.0
offset_right = 20.0
offset_bottom = 60.0
grow_vertical = 2
color = Color(1, 0.819608, 0.862745, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cpu"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_ufsw8")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
collision_mask = 3
script = ExtResource("4_g34ar")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.988235, 0.909804, 0.968627, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_854sb")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Up" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, -32)
shape = SubResource("RectangleShape2D_qhnmp")

[node name="Down" type="CollisionShape2D" parent="Borders"]
position = Vector2(576, 684)
shape = SubResource("RectangleShape2D_m3r76")

[node name="ScoreLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreLeft"]
position = Vector2(-32, 324)
shape = SubResource("RectangleShape2D_spf21")

[node name="ScoreRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreRight"]
position = Vector2(1184, 324)
shape = SubResource("RectangleShape2D_spf21")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="HUD"]
texture_filter = 1
offset_left = 456.0
offset_top = 5.0
offset_right = 506.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_pu8ha")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CpuScore" type="Label" parent="HUD"]
texture_filter = 1
offset_left = 648.0
offset_top = 5.0
offset_right = 698.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("2_pu8ha")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="ScoreLeft" to="." method="_on_score_left_body_entered"]
[connection signal="body_entered" from="ScoreRight" to="." method="_on_score_right_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
